feat: redis cache-aside for event and seat-availability reads